--- a/KeyboardOpener/Keyboard.xaml
+++ b/KeyboardOpener/Keyboard.xaml
@@ -2,7 +2,17 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="KeyboardOpener" Height="45" Width="85"
-        Background="#FF222222" AllowsTransparency="True" WindowStyle="None" Opacity="0.75" ResizeMode="NoResize" ShowInTaskbar="False" Topmost="True" Cursor="Hand" MouseRightButtonDown="Window_MouseRightButtonDown" MouseLeftButtonDown="Window_MouseLeftButtonDown" MouseLeftButtonUp="Window_MouseLeftButtonUp" MouseDoubleClick="Window_MouseDoubleClick">
+        Background="#FF222222"
+        AllowsTransparency="True"
+        WindowStyle="None"
+        Opacity="0.75"
+        ResizeMode="NoResize"
+        ShowInTaskbar="False"
+        Topmost="True"
+        Cursor="Hand"
+        MouseRightButtonDown="Window_MouseRightButtonDown"
+        MouseLeftButtonDown="Window_MouseLeftButtonDown"
+        MouseLeftButtonUp="Window_MouseLeftButtonUp">
 
     <Grid>
         <Image Name="img_KeyboardEnabled" Source="/Assets/icon_Keyboard.png" Width="Auto" HorizontalAlignment="Center" VerticalAlignment="Center" />
